<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayout_basetypes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <TableRow
                android:id="@+id/tableRow_basetype_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ToggleButton
                    android:id="@+id/toggle_basetype_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/toggle_basetype"
                    android:textOff="@string/baseMode_dec"
                    android:textOn="@string/baseMode_dec" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_basetype_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ToggleButton
                    android:id="@+id/toggle_basetype_bin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/toggle_basetype"
                    android:textOff="@string/baseMode_bin"
                    android:textOn="@string/baseMode_bin" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_basetype_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ToggleButton
                    android:id="@+id/toggle_basetype_hex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/toggle_basetype"
                    android:textOff="@string/baseMode_hex"
                    android:textOn="@string/baseMode_hex" />
            </TableRow>
        </TableLayout>

		<android.support.v4.view.ViewPager
		    android:id="@+id/baseinputsViewPager"
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="1" />

		<RelativeLayout
		    android:layout_width="50dip"
		    android:layout_height="match_parent"
		    android:layout_weight="0" >

			<TableLayout
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/tableLayout_baseinputBss"
			    android:layout_width="60dip"
			    android:layout_height="match_parent"
			    android:layout_weight="0"
			    android:orientation="horizontal"
			    android:stretchColumns="0" >

			    <TableRow
			        android:id="@+id/tableRow_baseinputBs_dec"
			        android:layout_width="wrap_content"
			        android:layout_height="0dip"
			        android:layout_weight="1" >

			        <ImageButton
			            android:id="@+id/imageView_baseinput_bs_dec"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:background="@drawable/image_backspace_background_active"
			            android:baselineAlignBottom="false"
			            android:scaleType="center"
			            android:src="@drawable/image_backspace_active" />
			    </TableRow>

			    <TableRow
			        android:id="@+id/tableRow_baseinputBs_bin"
			        android:layout_width="wrap_content"
			        android:layout_height="0dip"
			        android:layout_weight="1" >

			        <ImageButton
			            android:id="@+id/imageView_baseinput_bs_bin"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:background="@drawable/image_backspace_background_active"
			            android:baselineAlignBottom="false"
			            android:src="@drawable/image_backspace_active" />
			    </TableRow>

			    <TableRow
			        android:id="@+id/tableRow_baseinputBs_hex"
			        android:layout_width="wrap_content"
			        android:layout_height="0dip"
			        android:layout_weight="1" >

			        <ImageButton
			            android:id="@+id/imageView_baseinput_bs_hex"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:background="@drawable/image_backspace_background_active"
			            android:baselineAlignBottom="false"
			            android:src="@drawable/image_backspace_active" />
			    </TableRow>
			</TableLayout>

			<ImageButton
			    android:id="@+id/imageButton_baseinput_backspace"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_alignParentRight="true"
			    android:alpha="255"
			    android:background="@null"
			    android:src="@drawable/button_backspace_container" />

		</RelativeLayout>
        
    </LinearLayout>

	<TableLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/KeyTableLayout0"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="5dp"
	    android:stretchColumns="0,1,2,3,4,5" >
	    
	  <TableRow
	      android:id="@+id/keyTableRow0"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content" >

	       <Button
	           android:id="@+id/keyButtonA"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	            android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="A"
	           style="@style/main_keyButtons" />

	       <Button
	           android:id="@+id/keyButtonB"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	            android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="B"
	           style="@style/main_keyButtons" />

	       <Button
	           android:id="@+id/keyButtonC"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	            android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="C"
	           style="@style/main_keyButtons" />

	       <Button
	           android:id="@+id/keyButtonD"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	            android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="D"
	           style="@style/main_keyButtons" />

	       <Button
	           android:id="@+id/keyButtonE"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	            android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="E"
	           style="@style/main_keyButtons" />

	       <Button
	           android:id="@+id/keyButtonF"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:width="0dp"
	           android:background="@drawable/button_keynum"
	           android:layout_weight="1"
	           android:text="F"
	           style="@style/main_keyButtons" />

		</TableRow>
	</TableLayout>

	<TableLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/KeyTableLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:stretchColumns="0,1,2,3,4" >

	    <TableRow
	        android:id="@+id/keyTableRow1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1" >

	        <Button
	            android:id="@+id/keyButton7"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="7"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton8"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="8"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton9"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="9"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonMR"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keymem"
	            android:text="MR"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonOpDi"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keyopr"
	            android:text="@string/main_keyButtonOpDi_text"
	            style="@style/main_keyButtons" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/keyTableRow2"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        style="@style/main_keyButtons" >

	        <Button
	            android:id="@+id/keyButton4"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="4"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton5"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="5"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton6"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="6"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonMC"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keymem"
	            android:text="MC"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonOpMp"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keyopr"
	            android:text="@string/main_keyButtonOpMp_text"
	            style="@style/main_keyButtons" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/keyTableRow3"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        style="@style/main_keyButtons" >

	        <Button
	            android:id="@+id/keyButton1"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="1"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton2"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="2"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButton3"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="3"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonMin"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keymem"
	            android:text="Min"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonOpMi"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keyopr"
	            android:text="@string/main_keyButtonOpMi_text"
	            style="@style/main_keyButtons" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/keyTableRow4"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        style="@style/main_keyButtons" >

	        <Button
	            android:id="@+id/keyButton0"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="0"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonPM"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="@string/main_keyButtonPM_text"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonPo"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keynum"
	            android:text="@string/main_keyButtonPo_text"
	            android:textSize="20dp"
	            android:textStyle="bold"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonOpPl"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keyopr"
	            android:text="@string/main_keyButtonOpPl_text"
	            style="@style/main_keyButtons" />

	        <Button
	            android:id="@+id/keyButtonEq"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:width="0dp"
	            android:background="@drawable/button_keyopr"
	            android:text="@string/main_keyButtonEq_text"
	            style="@style/main_keyButtons" />
	    </TableRow>
	</TableLayout>

</LinearLayout>
